--- a/css/sub.css
+++ b/css/sub.css
@@ -152,6 +152,9 @@ main > section.section6 {
 .slider-wrap {
   position: relative;
 }
+.section6 {
+  position: relative !important;
+}
 .section6 .main-slider {
   width: 600px;
   height: 600px;
@@ -194,6 +197,46 @@ main > section.section6 {
   bottom: 0;
   right: 0;
 }
+.section6 .bubble a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.5rem;
+  font-weight: 600;
+  color: #fff;
+}
+/* ddd */
+.modal {
+  display: none;
+  position: absolute; /* 화면 전체에 대한 고정 위치 */
+  z-index: 999;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.close {
+  color: #aaaaaa;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+/* ggg */
 
 .project-img {
   position: relative;
