--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,7 @@
 @charset 'utf-8';
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css');
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 :root {
   font-size: 62.5%;
   --main-color: #1b58a6;
@@ -28,7 +28,7 @@ hr,
   clip: rect(0, 0, 0, 0);
 }
 body {
-  font: 1.6rem/1.5 'montserrat', 'Pretendard', sans-serif;
+  font: 1.6rem/1.5 "montserrat", "Pretendard", sans-serif;
   color: var(--title-color);
   word-break: keep-all;
 
@@ -81,4 +81,56 @@ header {
 .gnb > li > a.active {
   border-color: #000;
   border-radius: 40px;
+}
+
+.contact-modal {
+  display: none;
+  position: absolute; /* 화면 전체에 대한 고정 위치 */
+  z-index: 99;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  /* width: 100%;
+  height: 100%; */
+}
+.contact-modal .close {
+  color: #aaaaaa;
+  position: absolute;
+  top: 80px;
+  right: 70px;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.contact-info {
+  position: absolute;
+  color: #000;
+  font-weight: 500;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.contact-info h2 {
+  font-size: 2.5rem;
+  margin-bottom: 2rem;
+}
+.contact-info ul li {
+  margin-top: 1.5rem;
+  font-size: 1.8rem;
+}
+
+.dim {
+  display: none;
+  position: absolute;
+  z-index: 20;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
