--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 @charset 'utf-8';
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 :root {
   font-size: 62.5%;
   --main-color: #1b58a6;
@@ -29,7 +29,7 @@ hr,
   clip: rect(0, 0, 0, 0);
 }
 body {
-  font: 1.6rem/1.5 'montserrat', sans-serif;
+  font: 1.6rem/1.5 "montserrat", sans-serif;
   color: var(--title-color);
   word-break: keep-all;
 
@@ -86,7 +86,7 @@ header {
 }
 
 #container {
-  font-family: 'Lobster', sans-serif;
+  font-family: "Lobster", sans-serif;
   /* background: #f55; */
 }
 
@@ -137,8 +137,9 @@ header {
   padding: 7px 24px;
 
   text-align: center;
+  border-radius: 50%;
+  transition: 0.4s;
 }
 .menu-list > li > a:hover {
-  border-radius: 50%;
   background: var(--main-color-dark);
 }
