--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,7 @@
 @charset 'utf-8';
-@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
-@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 :root {
   font-size: 62.5%;
   --main-color: #1b58a6;
@@ -28,7 +28,7 @@ hr,
   clip: rect(0, 0, 0, 0);
 }
 body {
-  font: 1.6rem/1.5 "montserrat", "Pretendard", sans-serif;
+  font: 1.6rem/1.5 'montserrat', 'Pretendard', sans-serif;
   color: var(--title-color);
   word-break: keep-all;
 
@@ -75,12 +75,23 @@ header {
   font-size: 1.8rem;
   border: 3px solid transparent;
   padding: 7px 24px;
+  border-radius: 60px;
 
   text-align: center;
 }
 .gnb > li > a.active {
   border-color: #000;
-  border-radius: 40px;
+}
+.gnb .contact-btn {
+  border-color: transparent;
+  background: #000;
+  color: #fff;
+  transition: 0.4s;
+  margin-left: 2rem;
+}
+.gnb .contact-btn:hover {
+  background: var(--main-color-dark);
+  color: #fff;
 }
 
 .contact-modal {
@@ -122,7 +133,7 @@ header {
 
 .dim {
   display: none;
-  position: absolute;
+  position: fixed;
   z-index: 20;
   width: 100%;
   height: 100%;
