--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,12 @@ body {
   background: var(--main-color);
   height: 100vh;
   /* padding-top: 100px; */
+
+  overflow: hidden;
+  /* cursor: none; */
+  cursor: url(../img/surfer.png) 64 64, auto;
 }
+
 .inner {
   /* width: 176rem; */
   width: 90%;
@@ -141,7 +146,8 @@ header {
   align-items: center;
   gap: 20rem;
 }
-.menu-list > li > a {
+
+.menu-list li a {
   display: block;
   font-size: 2.5rem;
   border: 3px solid transparent;
@@ -151,18 +157,71 @@ header {
   text-align: center;
   border-radius: 50%;
   transition: 0.4s;
+  width: 100%;
+  height: 100%;
 }
+
 .menu-list > li > a:hover {
   background: var(--main-color-dark);
+  cursor: url(../img/dive.png) 45 45, auto;
 }
 
 .shark-img {
   position: fixed;
   top: 250px;
   left: 233px;
+  animation: shark-ani 2s linear infinite alternate;
 }
 .tube-img {
   position: fixed;
   top: 420px;
   right: 181px;
+  animation: tube-ani 1s linear infinite alternate;
+}
+
+/* 물보라 */
+#ripple-container {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  pointer-events: none; /* 요소가 마우스 이벤트를 차단하지 않게 설정 */
+  left: 50px;
+}
+
+.ripple {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background: var(--white);
+  border-radius: 50%;
+  animation: ripple-effect 0.5s linear infinite;
+}
+
+@keyframes ripple-effect {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(5);
+    opacity: 0;
+  }
+}
+
+@keyframes shark-ani {
+  0% {
+    transform: translateX(-50px);
+  }
+  100% {
+    transform: translateX(50px);
+  }
+}
+
+@keyframes tube-ani {
+  0% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
 }
