--- a/css/main.css
+++ b/css/main.css
@@ -168,14 +168,14 @@ header {
 
 .shark-img {
   position: fixed;
-  top: 250px;
-  left: 233px;
+  top: 300px;
+  left: 500px;
   animation: shark-ani 2s linear infinite alternate;
 }
 .tube-img {
   position: fixed;
-  top: 420px;
-  right: 181px;
+  bottom: 300px;
+  right: 400px;
   animation: tube-ani 1s linear infinite alternate;
 }
 
@@ -186,6 +186,7 @@ header {
   height: 30px;
   pointer-events: none; /* 요소가 마우스 이벤트를 차단하지 않게 설정 */
   left: 50px;
+  z-index: 7;
 }
 
 .ripple {
@@ -229,8 +230,8 @@ header {
 /* fish */
 .dolphin-wrap {
   position: absolute;
-  right: 400px;
-  top: 300px;
+  right: 800px;
+  top: 400px;
 }
 .fish-wrapper {
   position: absolute;
@@ -299,7 +300,7 @@ header {
   width: 70px;
   height: 70px;
   display: block;
-  z-index: 4;
+  z-index: 10;
 
   background: url(../img/dolphin.png) no-repeat 50% / contain;
 }
@@ -325,7 +326,7 @@ header {
   bottom: -100px;
   /* height: 70px;
   width: 77px; */
-  width: 300px;
+  width: 200px;
   height: 300px;
   display: block;
   z-index: 6;
