--- a/css/common.css
+++ b/css/common.css
@@ -35,7 +35,7 @@ body {
   box-sizing: border-box;
 
   position: relative;
-
+  color: #000;
   /* height: 100vh; */
   /* padding-top: 100px; */
 }
@@ -61,6 +61,11 @@ header {
   height: 10rem;
   /* background: #55f; */
   font-weight: 500;
+}
+.myName {
+  z-index: 10;
+  font-family: 'lobster', sans-serif;
+  font-size: 3rem;
 }
 .gnb {
   display: flex;
