--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,10 @@ header {
   /* background: #55f; */
   font-weight: 500;
 }
+.myName {
+  font-family: 'lobster', sans-serif;
+  font-size: 3rem;
+}
 .gnb {
   display: flex;
   margin-right: auto;
@@ -113,6 +117,7 @@ header {
   top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 99;
 }
 .title h1 {
   font-size: 25rem;
