--- a/css/sub.css
+++ b/css/sub.css
@@ -115,13 +115,95 @@ main > section.section6 {
   margin-top: 2.5rem;
   font-size: 2rem;
 }
-.content-wrap .index-list {
-  /* background: #55f; */
+/* .content-wrap .index-list {
   font-size: 3.5rem;
 }
 .content-wrap .index-list li {
   margin-bottom: 3.5rem;
+  display: flex;
+  align-items: center;
 }
+.content-wrap .index-list li::before {
+  content: '';
+  width: 100%;
+  height: 20px;
+  display: block;
+  position: absolute;
+  opacity: 0.3;
+} */
+.content-wrap .index-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  font-size: 3.5rem;
+}
+
+.content-wrap .index-list li {
+  position: relative;
+  margin-bottom: 3.5rem;
+  /* padding: 10px;  */
+}
+
+.content-wrap .index-list li a {
+  position: relative;
+  z-index: 1; /* 가상 요소 위에 위치하도록 설정 */
+}
+
+.content-wrap .index-list li a::before {
+  content: '';
+
+  width: 100%;
+  height: 20px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  opacity: 0;
+  transform: translateY(-50%);
+  z-index: -1; /* 텍스트 뒤로 배치 */
+  transition: 0.3s;
+}
+
+.content-wrap .index-list li a:hover::before {
+  opacity: 0.3; /* hover 시 불투명도 증가 */
+  background: var(--skyblue);
+}
+
+/* img-box */
+/* .content-wrap .index-list li:hover::before {
+  background: var(--skyblue);
+  transition: 0.3s;
+} */
+.img-box {
+  background: #fff;
+  border: 1px solid #000;
+  /* width: 360px;
+  height: 400px; */
+  width: 200px;
+  height: 200px;
+  border-radius: 20px;
+  overflow: hidden;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  visibility: hidden;
+  pointer-events: none;
+  transform-origin: 0 0;
+  z-index: 99;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 60px 50px -7px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.img-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+/* img-box e */
 
 /* project */
 .section:not(.section1) {
@@ -353,7 +435,7 @@ main > section.section6 {
 }
 
 .section4 .project-img img {
-  top: 53%;
+  top: 58%;
   left: 60%;
 }
 .section5 .project-img img {
