--- a/css/sub.css
+++ b/css/sub.css
@@ -1,10 +1,18 @@
 @charset 'utf-8';
+.gnb > li > a:not(.contact-btn).active:before {
+  content: '';
+  display: block;
+  height: 45px;
+  width: 100%;
+  border: 3px solid #000;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  bottom: 0;
 
-main > section {
-  height: 100vh;
-  padding: 150px 100px;
+  border-radius: 50px;
 }
-
 /* main > section.section1 {
   background: rgb(69, 42, 42);
 } */
