--- a/css/common.css
+++ b/css/common.css
@@ -244,3 +244,56 @@ header {
   text-decoration: none;
   cursor: pointer;
 }
+
+/* ring */
+.ring {
+  position: relative;
+  width: 500px;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.ring i {
+  position: absolute;
+  inset: 0;
+  /* border: 2px solid #fff; */
+  /* background: rgba(255, 255, 255, 0.5); */
+  background: #e3f9ff;
+  opacity: 0.5;
+  transition: 0.5s;
+}
+.ring i:nth-child(1) {
+  border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
+  animation: animate 14s linear infinite;
+}
+.ring i:nth-child(2) {
+  border-radius: 41% 44% 56% 59%/38% 62% 63% 37%;
+  animation: animate 12s linear infinite;
+}
+.ring i:nth-child(3) {
+  border-radius: 41% 44% 56% 59%/38% 62% 63% 37%;
+  animation: animate2 18s linear infinite;
+}
+
+.ring:hover i {
+  border: 1px solid var(--clr);
+  filter: drop-shadow(0 0 10px var(--clr));
+}
+
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes animate2 {
+  0% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
