--- a/css/sub.css
+++ b/css/sub.css
@@ -117,7 +117,8 @@ main > section.section6 {
   right: 150%;
   transform: translateY(-50%);
   /* background-color: rgba(0, 0, 0, 0.75); */
-  background-color: var(--main-color);
+  /* background-color: var(--main-color); */
+  background-color: #000;
   color: #fff;
   padding: 5px 15px !important;
 
@@ -372,6 +373,10 @@ main > section.section6 {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  z-index: 1000;
+}
+.modal-content img {
+  max-height: 90vh;
 }
 
 /* ddd */
@@ -380,6 +385,7 @@ main > section.section6 {
   display: none;
   position: absolute; /* 위치 고정 */
   z-index: 20; /* 낮은 z-index */
+  z-index: 999;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
