--- a/css/sub.css
+++ b/css/sub.css
@@ -364,6 +364,46 @@ main > section.section6 {
   max-width: 100%;
 }
 
+/* ttt */
+.project-img .overlay-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 18px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  z-index: 1;
+}
+
+.project-img::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  z-index: 0;
+}
+
+.project-img:hover::after {
+  opacity: 1;
+}
+
+.project-img .overlay-text {
+  font-size: 3rem;
+  font-weight: 600;
+}
+
+.project-img:hover .overlay-text {
+  opacity: 1;
+}
+/* ttt */
+
 .section6 .bubble {
   position: absolute;
   width: 162px;
