그래픽 이미지 추가

--- a/css/sub.css
+++ b/css/sub.css
@@ -65,6 +65,7 @@ main > section.section6 {
 
 즉, 300px - 55.5px = 244.5px */
   margin-left: 244.5px;
+  margin-left: 230px;
 }
 
 #fp-nav ul li a span,
